--- a/templates/estabelecimentos.html
+++ b/templates/estabelecimentos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,10 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
-  
-<div id="header-placeholder"></div>
+
+  <div id="header-placeholder"></div>
   <main class="container mt-4">
     <h1 class="section-title">Estabelecimentos Cadastrados</h1>
     <p class="section-subtitle">Confira todos os locais que já aceitam Bitcoin!</p>
@@ -67,14 +69,8 @@
       }
     });
   </script>
-  <script>
-    fetch('header.html').then(res => res.text()).then(data => {
-      document.getElementById('header-placeholder').innerHTML = data;
-    });
-    fetch('footer.html').then(res => res.text()).then(data => {
-      document.getElementById('footer-placeholder').innerHTML = data;
-    });
-  </script>
+  <script src="js/load-header-and-footer.js"></script>
   
 </body>
+
 </html>
