--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,46 +1,46 @@
 <footer>
-    <div class="footer-container">
-      <div class="footer-section">
-        <h4>Aceita Bitcoin?</h4>
-        <p>Iniciativa do Clube BR⚡LN para promover a adoção de Bitcoin em estabelecimentos comerciais.</p>
-        <div class="social-links">
-          <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="#" target="_blank"><i class="fab fa-telegram"></i></a>
-          <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-        </div>
-      </div>
-      <div class="footer-section">
-        <h4>Links Úteis</h4>
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="sobre.html">Sobre nós</a></li>
-          <li><a href="carteiras.html">Carteiras Bitcoin</a></li>
-          <li><a href="cadastro.html">Cadastre o estabelecimento</a></li>
-          <li><a href="materiais.html">Materiais</a></li>
-          <li><a href="estabelecimentos.html">Estabelecimentos</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h4>Recursos</h4>
-        <ul>
-          <li><a href="https://btcmap.org" target="_blank">BTC Map</a></li>
-          <li><a href="https://bitcoin.org" target="_blank">Bitcoin.org</a></li>
-          <li><a href="https://lightning.network" target="_blank">Lightning Network</a></li>
-          <li><a href="https://www.openstreetmap.org" target="_blank">OpenStreetMap</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h4>Contato</h4>
-        <ul>
-          <li><i class="fas fa-envelope me-2"></i> contato@aquiaceitabitcoin.com.br</li>
-          <li><i class="fas fa-map-marker-alt me-2"></i> Carambeí, Paraná, Brasil</li>
-        </ul>
+  <div class="footer-container">
+    <div class="footer-section">
+      <h4>Aceita Bitcoin?</h4>
+      <p>Iniciativa do Clube BR⚡LN para promover a adoção de Bitcoin em estabelecimentos comerciais.</p>
+      <div class="social-links">
+        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-telegram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
-    <div class="copyright">
-      <p>&copy; 2025 Aceita Bitcoin? - Clube BR⚡LN. Todos os direitos reservados.</p>
-      <p>Powered by <img src="https://bitcoin.org/img/icons/logotop.svg" alt="Bitcoin Logo" class="bitcoin-logo"> Bitcoin</p>
+    <div class="footer-section">
+      <h4>Links Úteis</h4>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre nós</a></li>
+        <li><a href="carteiras.html">Carteiras Bitcoin</a></li>
+        <li><a href="cadastro.html">Cadastre o estabelecimento</a></li>
+        <li><a href="materiais.html">Materiais</a></li>
+        <li><a href="estabelecimentos.html">Estabelecimentos</a></li>
+      </ul>
     </div>
-  </footer>
-  
+    <div class="footer-section">
+      <h4>Recursos</h4>
+      <ul>
+        <li><a href="https://btcmap.org" target="_blank">BTC Map</a></li>
+        <li><a href="https://bitcoin.org" target="_blank">Bitcoin.org</a></li>
+        <li><a href="https://lightning.network" target="_blank">Lightning Network</a></li>
+        <li><a href="https://www.openstreetmap.org" target="_blank">OpenStreetMap</a></li>
+      </ul>
+    </div>
+    <div class="footer-section">
+      <h4>Contato</h4>
+      <ul>
+        <li><i class="fas fa-envelope me-2"></i> contato@aquiaceitabitcoin.com.br</li>
+        <li><i class="fas fa-map-marker-alt me-2"></i> Carambeí, Paraná, Brasil</li>
+      </ul>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>&copy; 2025 Aceita Bitcoin? - Clube BR⚡LN. Todos os direitos reservados.</p>
+    <p>Powered by <img src="https://bitcoin.org/img/icons/logotop.svg" alt="Bitcoin Logo" class="bitcoin-logo"> Bitcoin
+    </p>
+  </div>
+</footer>
