--- a/templates/header.html
+++ b/templates/header.html
@@ -1,17 +1,17 @@
 <header>
-    <div class="header-container">
-      <div class="logo">
-        <img src="img/logos/logo.png" alt="Logo Aceita Bitcoin?" onerror="this.src='https://via.placeholder.com/150x50/f7931a/ffffff?text=Aqui+aceita+Bitcoin?'">
-      </div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="sobre.html">Sobre nós</a></li>
-          <li><a href="carteiras.html">Carteiras Bitcoin</a></li>
-          <li><a href="cadastro.html">Cadastre seu estabelecimento</a></li>
-          <li><a href="materiais.html">Materiais</a></li>
-          <li><a href="estabelecimentos.html">Estabelecimentos</a></li>
-        </ul>
-      </nav>
+  <div class="header-container">
+    <div class="logo">
+      <img src="img/logos/logo.png" alt="Logo Aceita Bitcoin?" style="width: 100px; height: auto; align-self: center;">
     </div>
-  </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre nós</a></li>
+        <li><a href="carteiras.html">Carteiras Bitcoin</a></li>
+        <li><a href="cadastro.html">Cadastre seu estabelecimento</a></li>
+        <li><a href="materiais.html">Materiais</a></li>
+        <li><a href="estabelecimentos.html">Estabelecimentos</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
