ajuste na localizacao dos css

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/btcmap-flags.css">
-  <link rel="stylesheet" href="static/css/admin.css">
+  <link rel="stylesheet" href="css/admin.css">
 </head>
 
 <body>
