--- a/templates/carteiras.html
+++ b/templates/carteiras.html
@@ -7,7 +7,7 @@
   <title>Carteiras Bitcoin - Aceita Bitcoin?</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="static/css/carteiras.css">
+  <link rel="stylesheet" href="css/carteiras.css">
 </head>
 
 <body>
