--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/btcmap-flags.css">
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/btcmap-flags.css">
+  <link rel="stylesheet" href="/css/admin.css">
 </head>
 
 <body>
