--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -7,8 +7,8 @@
   <title>Cadastro de Estabelecimento - Aceita Bitcoin?</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/cadastro.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/cadastro.css">
 </head>
 
 <body>
