correcao nos links das imagens para producao

--- a/templates/carteiras.html
+++ b/templates/carteiras.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carteiras Bitcoin - Aceita Bitcoin?</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="/css/carteiras.css">
 </head>
@@ -58,7 +58,7 @@
 
         <div class="wallet-card">
           <div class="wallet-header">
-            <img src="img/logos/wos.jpg" alt="Wallet of Satoshi" class="wallet-logo">
+            <img src="/img/logos/wos.jpg" alt="Wallet of Satoshi" class="wallet-logo">
             <div class="wallet-name">Wallet of Satoshi</div>
             <div class="wallet-type">Mobile</div>
           </div>
