correcao do caminho das imagens

--- a/templates/carteiras.html
+++ b/templates/carteiras.html
@@ -58,7 +58,7 @@
 
         <div class="wallet-card">
           <div class="wallet-header">
-            <img src="/img/logos/wos.jpg" alt="Wallet of Satoshi" class="wallet-logo">
+            <img src="./img/logos/wos.jpg" alt="Wallet of Satoshi" class="wallet-logo">
             <div class="wallet-name">Wallet of Satoshi</div>
             <div class="wallet-type">Mobile</div>
           </div>
